--- a/app/views/popup.scala.html
+++ b/app/views/popup.scala.html
@@ -3,7 +3,7 @@
 @main("Welcome to Play") {
 <h1>PopUp</h1>
 
-<input type="image" src="" value="FB" id="fb_btn" onclick="store(document.getElementById('fb_btn').value)" />
+<input type="button" value="FB" id="fb_btn" onclick="store(value)" />
 <input type="button" value="Reddit" id="reddit_btn" onclick="store(document.getElementById('reddit_btn').value)" />
 <input type="button" value="Twitter" id="twtr_btn" onclick="store(document.getElementById('twtr_btn').value)" />
 <input type="button" value="LinkedIn" id="linkedin_btn" onclick="store(document.getElementById('linkedin_btn').value)" />
